# sort-tracker

./: .gitignore  Readme.md  pyproject.toml  sort.py
scripts/: mot16_benchmark.py  mot16_sort.py
tracking/: sort.py  sort.yaml  utils.py
